<resources>
    <string name="app_name">A01DL</string>
    <string name="app_name2">AirA01a</string>
    <string name="blank"> </string>
    <string name="dummy">--</string>
    <string name="button">Button</string>
    <string name="configuration">Settings</string>
    <string name="restore">Restore</string>
    <string name="icon">icon</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_photo_library">Photo Library</string>
    <string name="title_auto_transfer">Auto Transfer</string>
    <string name="permission_not_granted">Permissions not granted by the user.</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_positive_execute">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="action_refresh">Refresh</string>
    <string name="finish_refresh">Finished Refresh</string>
    <string name="dialog_confirm_title_output_log">Share debug log</string>
    <string name="dialog_confirm_message_output_log">Share the debug log, OK?</string>
    <string name="dialog_message_power_off">Power Off</string>
    <string name="dialog_message_exit_application">Exit Application</string>
    <string name="download_progress_percent">%1$d%%</string>
    <string name="camera_disconnected">Disconnected</string>
    <string name="only_opc_feature">This feature is only available for a OPC Camera.</string>
    <string name="pref_cat_application_control">App. Control</string>
    <string name="pref_exit_power_off">Exit Application(and Camera OFF)</string>
    <string name="pref_connection_method">Connection Method (Needs restart)</string>
    <string name="pref_cat_camera">Camera</string>
    <string name="pref_capture_both_camera_and_live_view">Capture both camera and Live View</string>
    <string name="pref_cat_initialize">App. Startup</string>
    <string name="pref_auto_connect_camera">Auto Connect To Camera</string>
    <string name="pref_summary_auto_connect_camera">Normally to keep ON.</string>
    <string name="pref_gr2_display_mode">Display Mode</string>
    <string name="pref_gr2_display_camera_view">Mirror Camera Screen</string>
    <string name="pref_gr2_display_camera_view_summary">Use same camera screen.(GR2 Only)</string>
    <string name="pref_gr2_lcd_sleep">Screen off during connected</string>
    <string name="pref_gr2_lcd_sleep_summary">This switch effects only GR2.</string>
    <string name="pref_cat_others">Others</string>
    <string name="pref_call_share_after_save">Share after Save</string>
    <string name="pref_use_playback_menu">Use playback screen menu</string>
    <string name="pref_summary_use_playback_menu">Normally to keep ON.</string>
    <string name="pref_use_gr2_special_command">Use GR2 Special Command</string>
    <string name="summary_use_gr2_special_command">Use some GR2 special command.</string>
    <string name="pref_pentax_capture_after_auto_focus">Capture after AF(PENTAX)</string>
    <string name="summary_pentax_capture_after_auto_focus">Capture after AF.(for PENTAX DSLR, needs restart)</string>
    <string name="pref_cat_gokigen">GOKIGEN</string>
    <string name="pref_instruction_manual">Instructions</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_debug_info">Debug Information</string>
    <string name="pref_summary_debug_info">LogCat Information</string>
    <string name="dialog_title_connect_failed_ricoh">Connect failed (RICOH)</string>
    <string name="dialog_title_connect_failed_sony">Connect failed (SONY)</string>
    <string name="dialog_title_connect_failed_opc">Connect failed (OPC)</string>
    <string name="dialog_title_connect_failed_panasonic">Connect failed (Panasonic)</string>
    <string name="dialog_title_connect_failed_fuji">Connect failed (FUJI)</string>
    <string name="dialog_title_connect_failed_canon">Connect failed (Canon)</string>
    <string name="dialog_title_connect_failed_nikon">Connect failed (Nikon)</string>
    <string name="dialog_title_connect_failed_olympus">Connect failed (Olympus)</string>
    <string name="dialog_title_connect_failed_theta">Connect failed (Theta)</string>
    <string name="dialog_title_connect_failed_visionkids">Connect failed (VisionKids)</string>
    <string name="dialog_title_button_retry">Retry</string>
    <string name="dialog_title_button_network_settings">WiFi Settings</string>
    <string name="save_props">Save</string>
    <string name="hint_save_props">Label</string>
    <string name="saved_my_props">Saved Property : </string>
    <string name="auto_save_props">(Auto Save)</string>
    <string name="title_tab_title_load">Load</string>
    <string name="title_tab_title_save">Save</string>
    <string name="title_my_settings">Favorite Camera Properties</string>
    <string name="dialog_title_loading_properties">Loading Camera Properties</string>
    <string name="dialog_message_loading_properties">Please wait&#8230;</string>
    <string name="dialog_start_save_property_message">Please Wait</string>
    <string name="dialog_start_save_property_title">Storing Properties&#8230;</string>
    <string name="dialog_start_load_property_message">Please Wait</string>
    <string name="dialog_start_load_property_title">Setting Properties&#8230;</string>
    <string name="restored_my_props">Restored Property : </string>
    <string name="dialog_message_restore_camera_property">Restore Camera Property</string>
    <string name="camera_not_found">Cannot connect the camera&#8230;</string>
    <string name="connect_connected">connected</string>
    <string name="network_connection_timeout">Connection time out</string>
    <string name="connect_check_wifi">check WIFI</string>
    <string name="connect_start">start</string>
    <string name="connect_change_run_mode">changeRunMode</string>
    <string name="fatal_cannot_use_camera">The CameraKit SDK can not work because the running mode of camera is UNKNOWN.   So please long press the power button of camera more than 8 seconds. (This is the camera reset operation.) After that turn on the camera power again.</string>
    <string name="camera_reset_required">The camera reset operation is required.</string>
    <string name="pref_camera_sound_volume">Shutter Sound</string>
    <string name="pref_download_small_picture_size">Small picture size to download</string>
    <string name="pref_take_raw">Take Raw</string>
    <string name="pref_cat_live_view">Live View Settings</string>
    <string name="pref_live_view_quality">Live View Quality</string>
    <string name="pref_cat_info">Information</string>
    <string name="pref_focal_length">Focal Length</string>
    <string name="pref_lens_status">Lens Status</string>
    <string name="pref_media_status">SD Card Status</string>
    <string name="pref_camera_version">Camera Version</string>
    <string name="pref_camerakit_version">Camera kit Version</string>
    <string name="now">Now</string>
    <string name="sundayLabel">Sun</string>
    <string name="mondayLabel">Mon</string>
    <string name="tuesdayLabel">Tue</string>
    <string name="wednesdayLabel">Wed</string>
    <string name="thursdayLabel">Thu</string>
    <string name="fridayLabel">Fri</string>
    <string name="saturdayLabel">Sat</string>
    <string name="time_picker_year_month_separator">/</string>
    <string name="time_picker_minute_separator">:</string>
    <string name="time_picker_end_separator"> </string>
    <string name="information_month_picker">Set Year and Month</string>
    <string name="get_camera_contents_wait">Check contents&#8230; wait</string>
    <string name="get_camera_contents_error">Check contents&#8230; Error!</string>
    <string name="get_camera_contents_finished">Contents </string>
    <string name="pref_sony_api_list">Sony Camera Api List</string>
    <string name="pref_exit_power_off_theta">Exit Application</string>
    <string name="pref_exit_power_off_pixpro">Exit Application</string>
    <string name="pref_exit_power_off_sony">Exit Application</string>
    <string name="pref_summary_sony_api_list">Show available camera apis.</string>
    <string name="pref_ricoh_get_pics_list_timeout">Get Pics List Timeout(unit: sec.)</string>
    <string name="pref_summary_ricoh_get_pics_list_timeout">If the camera has many number of Pics, increase number.</string>
    <string name="pref_canon_raw_suffix">RAW Suffix</string>
    <string name="pref_summary_canon_raw_suffix">Please set your camera RAW suffix.</string>
    <string name="pref_olympus_get_screennail_as_small_picture">Use small image as screen nail</string>
    <string name="pref_summary_olympus_get_screennail_as_small_picture">Use small size image as </string>
    <string name="pref_nikon_get_screennail_as_small_picture">Use small image as screen nail</string>
    <string name="pref_summary_nikon_get_screennail_as_small_picture">Use small size image as </string>
    <string name="pref_canon_get_screennail_as_small_picture">Use small image as screen nail</string>
    <string name="pref_summary_canon_get_screennail_as_small_picture">Use small size image as </string>
    <string name="pref_nikon_auto_detect_host_ip">Set camera ip automatically.</string>
    <string name="pref_summary_nikon_auto_detect_host_ip">Normally to keep ON.</string>
    <string name="pref_canon_auto_detect_host_ip">Set camera ip automatically.</string>
    <string name="pref_summary_canon_auto_detect_host_ip">Normally to keep ON.</string>
    <string name="pref_nikon_host_ip">Camera IP Address</string>
    <string name="pref_summary_nikon_host_ip"> </string>
    <string name="pref_wifi_settings">WIFI Settings</string>
    <string name="pref_summary_wifi_settings"> </string>
    <string name="pref_nikon_receive_wait">Receive reply wait(ms)</string>
    <string name="pref_summary_nikon_receive_wait"> </string>
    <string name="pref_canon_receive_wait">Receive reply wait(ms)</string>
    <string name="pref_summary_canon_receive_wait"> </string>
    <string name="pref_show_send_dialog">HTTP Send Message</string>
    <string name="pref_summary_show_send_dialog"> </string>
    <string name="pref_use_osc_theta_v21">Use THETA Web API v2.1</string>
    <string name="pref_summary_use_osc_theta_v21"> </string>
    <string name="pref_thumbnail_image_cache_size">Thumbnail image cache size</string>
    <string name="pref_summary_thumbnail_image_cache_size">If you use low memory machine, please decrease this value.(default:120)</string>
    <string name="pref_canon_host_ip">Camera IP Address</string>
    <string name="pref_summary_canon_host_ip">default: 192.168.0.1 </string>
    <string name="pref_canon_connection_mode">Connection Sequence</string>
    <string name="pref_summary_canon_connection_mode">default: TYPE0 </string>
    <string name="pref_canon_small_picture_type">Small Picture Getting Sequence</string>
    <string name="pref_summary_canon_small_picture_type">default: TYPE0 </string>
    <string name="pref_visionkids_host_ip">Camera IP(default: 192.168.4.100)</string>
    <string name="pref_summary_visionkids_host_ip">VisionKids:192.168.4.100, myFirst:192.168.1.1</string>
    <string name="pref_visionkids_ftp_user">Camera Access User</string>
    <string name="pref_summary_visionkids_ftp_user">default: ftp </string>
    <string name="pref_visionkids_ftp_pass">Camera Access Pass</string>
    <string name="pref_summary_visionkids_ftp_pass">default: ftp </string>
    <string name="pref_visionkids_get_pics_list_timeout">Get Pics List Timeout(unit: sec.)</string>
    <string name="pref_summary_visionkids_get_pics_list_timeout">If the camera has many number of Pics, increase number.</string>
    <string name="pref_visionkids_auto_detect_ip_host">Set camera ip automatically.</string>
    <string name="pref_summary_visionkids_auto_detect_ip_host">Normally to keep ON.</string>
</resources>