<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_application_control">

        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/pref_exit_power_off_sony" />

        <ListPreference
            android:title="@string/pref_connection_method"
            android:entryValues="@array/connection_method_value"
            android:entries="@array/connection_method"
            android:key="connection_method"
            android:defaultValue="OPC"/>

        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <CheckBoxPreference
            android:key="nikon_get_screennail_as_small_picture"
            android:title="@string/pref_nikon_get_screennail_as_small_picture"
            android:summary="@string/pref_summary_nikon_get_screennail_as_small_picture" />

        <EditTextPreference
            android:key="nikon_host_ip"
            android:title="@string/pref_nikon_host_ip"
            android:defaultValue="192.168.1.1"
            android:summary="@string/pref_summary_nikon_host_ip" />

        <EditTextPreference
            android:key="nikon_receive_wait"
            android:title="@string/pref_nikon_receive_wait"
            android:defaultValue="50"
            android:summary="@string/pref_summary_nikon_receive_wait" />

        <CheckBoxPreference
            android:key="nikon_auto_detect_host_ip"
            android:title="@string/pref_nikon_auto_detect_host_ip"
            android:summary="@string/pref_summary_nikon_auto_detect_host_ip" />
<!--
        <CheckBoxPreference
            android:key="ble_wifi_on"
            android:title="@string/pref_ble_wifi_on"
            android:summary="@string/pref_summary_ble_wifi_on"/>
-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_initialize">

        <CheckBoxPreference
        android:key="auto_connect_to_camera"
        android:title="@string/pref_auto_connect_camera"
        android:summary="@string/pref_summary_auto_connect_camera" />

        <EditTextPreference
            android:key="thumbnail_image_cache_size"
            android:title="@string/pref_thumbnail_image_cache_size"
            android:defaultValue="120"
            android:inputType="number"
            android:summary="@string/pref_summary_thumbnail_image_cache_size" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_gokigen">

        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://github.com/MRSa/GokigenOSDN_documents/blob/main/Applications/A01DL/Readme.md"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/MRSa/GokigenOSDN_documents/blob/main/Applications/A01DL/Readme.md" />
        </Preference>

        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://github.com/MRSa/GokigenOSDN_documents/blob/main/PrivacyPolicy.md"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/MRSa/GokigenOSDN_documents/blob/main/PrivacyPolicy.md" />
        </Preference>

        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />

    </PreferenceCategory>
</PreferenceScreen>
