<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_application_control">

        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/pref_exit_power_off_theta" />

        <ListPreference
            android:title="@string/pref_connection_method"
            android:entryValues="@array/connection_method_value"
            android:entries="@array/connection_method"
            android:key="connection_method"
            android:defaultValue="OPC"/>

        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <CheckBoxPreference
            android:key="use_osc_theta_v21"
            android:title="@string/pref_use_osc_theta_v21"
            android:summary="@string/pref_summary_use_osc_theta_v21"/>

        <PreferenceScreen
            android:key="send_command_dialog"
            android:title="@string/pref_show_send_dialog"
            android:summary="@string/pref_summary_show_send_dialog" />

        <EditTextPreference
            android:key="ricoh_get_pics_list_timeout"
            android:title="@string/pref_ricoh_get_pics_list_timeout"
            android:defaultValue="10"
            android:inputType="number"
            android:summary="@string/pref_summary_ricoh_get_pics_list_timeout" />

        <!--
        <CheckBoxPreference
            android:key="capture_both_camera_and_live_view"
            android:title="@string/pref_capture_both_camera_and_live_view" />
-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_initialize">

        <CheckBoxPreference
        android:key="auto_connect_to_camera"
        android:title="@string/pref_auto_connect_camera"
        android:summary="@string/pref_summary_auto_connect_camera" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_gokigen">

        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://osdn.net/projects/gokigen/wiki/PKRemote"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/PKRemote" />
        </Preference>

        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy" />
        </Preference>

        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />

    </PreferenceCategory>
</PreferenceScreen>
