<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_application_control">

        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/pref_exit_power_off_sony" />

        <ListPreference
            android:title="@string/pref_connection_method"
            android:entryValues="@array/connection_method_value"
            android:entries="@array/connection_method"
            android:key="connection_method"
            android:defaultValue="OPC"/>

        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <CheckBoxPreference
            android:key="canon_get_screennail_as_small_picture"
            android:title="@string/pref_canon_get_screennail_as_small_picture"
            android:summary="@string/pref_summary_canon_get_screennail_as_small_picture" />

        <EditTextPreference
            android:key="canon_raw_suffix"
            android:title="@string/pref_canon_raw_suffix"
            android:defaultValue="CR2"
            android:inputType="number"
            android:summary="@string/pref_summary_canon_raw_suffix" />

        <EditTextPreference
            android:key="canon_receive_wait"
            android:title="@string/pref_canon_receive_wait"
            android:defaultValue="20"
            android:summary="@string/pref_summary_canon_receive_wait" />

        <EditTextPreference
            android:key="canon_host_ip"
            android:title="@string/pref_canon_host_ip"
            android:defaultValue="192.168.0.1"
            android:summary="@string/pref_summary_canon_host_ip" />

        <ListPreference
            android:title="@string/pref_canon_small_picture_type"
            android:summary="@string/pref_summary_canon_small_picture_type"
            android:entryValues="@array/canon_small_picture_type_value"
            android:entries="@array/canon_small_picture_type"
            android:key="canon_small_picture_type"
            android:defaultValue="0"/>

        <ListPreference
            android:title="@string/pref_canon_connection_mode"
            android:summary="@string/pref_summary_canon_connection_mode"
            android:entryValues="@array/canon_connection_mode_value"
            android:entries="@array/canon_connection_mode"
            android:key="canon_connection_mode"
            android:defaultValue="0"/>

        <CheckBoxPreference
            android:key="canon_auto_detect_host_ip"
            android:title="@string/pref_canon_auto_detect_host_ip"
            android:summary="@string/pref_summary_canon_auto_detect_host_ip" />

        <!--

        <PreferenceScreen
            android:key="sony_api_list"
            android:title="@string/pref_sony_api_list"
            android:summary="@string/pref_summary_sony_api_list" />

        <CheckBoxPreference
            android:key="use_smartphone_transfer_mode"
            android:title="@string/pref_sony_use_smartphone_transfer"
            android:summary="@string/pref_summary_sony_use_smartphone_transfer" />

        <CheckBoxPreference
            android:key="get_small_picture_as_vga"
            android:title="@string/pref_get_small_picture_as_vga"
            android:summary="@string/pref_summary_get_small_picture_as_vga" />

                <CheckBoxPreference
                    android:key="capture_both_camera_and_live_view"
                    android:title="@string/pref_capture_both_camera_and_live_view" />
        -->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_initialize">

        <CheckBoxPreference
        android:key="auto_connect_to_camera"
        android:title="@string/pref_auto_connect_camera"
        android:summary="@string/pref_summary_auto_connect_camera" />

        <EditTextPreference
            android:key="thumbnail_image_cache_size"
            android:title="@string/pref_thumbnail_image_cache_size"
            android:defaultValue="120"
            android:inputType="number"
            android:summary="@string/pref_summary_thumbnail_image_cache_size" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_gokigen">

        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://github.com/MRSa/GokigenOSDN_documents/blob/main/Applications/A01DL/Readme.md"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/MRSa/GokigenOSDN_documents/blob/main/Applications/A01DL/Readme.md" />
        </Preference>

        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://github.com/MRSa/GokigenOSDN_documents/blob/main/PrivacyPolicy.md"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/MRSa/GokigenOSDN_documents/blob/main/PrivacyPolicy.md" />
        </Preference>

        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />

    </PreferenceCategory>
</PreferenceScreen>
